Some basic files to go up

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
-    "require": {
+    "require": { 
         "monolog/monolog": "1.0.*",
         "silex/silex":"1.*",
-        "guzzle/guzzle":"3.9.*"
+        "guzzle/guzzle":"3.9.*",
+        "twig/twig":"1.*",
+        "doctrine/orm":"*"        
     }
 }
