--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
         "silex/silex":"1.*",
         "guzzle/guzzle":"3.9.*",
         "twig/twig":"1.*",
-        "doctrine/orm":"*"        
+        "doctrine/orm":"*",  
+        "components/jquery":"*",    
     }
 }
