--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "loney89/red-child",
+    "name": "Application for Gaming APIs",
     "authors": [
         {
             "name": "Simon Nicholls",
@@ -19,5 +19,26 @@
         "twig/twig": "~1.23",
         "symfony/twig-bridge": "2.1.*",
         "doctrine/dbal": "~2.5"
+    },
+    "require-dev" : {
+        "silex/silex": "~1.3",
+        "monolog/monolog": "~1.17",
+        "guzzlehttp/guzzle": "~6.1",
+        "twig/twig": "~1.23",
+        "symfony/twig-bridge": "2.1.*",
+        "doctrine/dbal": "~2.5",
+        "phpunit/phpunit": "~4.1"
+    },
+    "autoload":{
+        "psr-4": {
+            "RedChild\\Api\\": "api/",
+            "RedChild\\Api\\Lib\\":"api/lib/",
+            "RedChild\\Api\\Lib\\Db\\":"api/lib/db/",
+            "RedChild\\Api\\Controller\\":"api/controller/",
+            "RedChild\\Model\\":"model/",
+            "RedChild\\Model\\ViewModel\\":"model/viewmodel",
+            "RedChild\\Public\\":"public/",
+            "RedChild\\Tests\\":"tests/"
+        }
     }
 }
