Added some stuff, getting to grips with the Riot APi, damn it's a bit wonky in places....

--- a/composer.json
+++ b/composer.json
@@ -35,8 +35,11 @@
             "RedChild\\Api\\Lib\\":"api/lib/",
             "RedChild\\Api\\Lib\\Db\\":"api/lib/db/",
             "RedChild\\Api\\Controller\\":"api/controller/",
-            "RedChild\\Model\\":"model/",
-            "RedChild\\Model\\ViewModel\\":"model/viewmodel",
+            "RedChild\\Api\\Controller\\League\\":"api/controller/league/",
+            "RedChild\\Gateway\\":"gateway/",
+            "RedChild\\Gateway\\League\\":"gateway/league/",
+            "RedChild\\Gateway\\ViewGateway\\":"gateway/viewmodel/",
+            "RedChild\\Gateway\\ViewGateway\\League\\":"gateway/viewmodel/league/",
             "RedChild\\Public\\":"public/",
             "RedChild\\Tests\\":"tests/"
         }
